--- a/AilianBT/Views/Controls/PlayerView.xaml
+++ b/AilianBT/Views/Controls/PlayerView.xaml
@@ -247,7 +247,9 @@
 
         <converters:PlayStatusConverter x:Key="PlayingToVisible" StatusToVisible="Playing" />
         <converters:PlayStatusConverter x:Key="PausedToVisible" StatusToVisible="Paused" />
-        <converters:TimeSpanConverter x:Key="DurationConverter" />
+        <converters:TimeSpanStrConverter x:Key="TimeSpanStrConverter" />
+        <converters:TimeSpanToSecondConverter x:Key="TimeSpanToSecondConverter" />
+        <converters:SecondToTimeSpanConverter x:Key="SecondToTimeSpanConverter" />
     </UserControl.Resources>
 
     <Grid>
@@ -330,7 +332,7 @@
                                    FocusVisualPrimaryBrush="#FFE2E2E2"
                                    FontSize="12"
                                    Foreground="#FFE4E4E4"
-                                   Text="{x:Bind _playerVM.CurrentMusic.Position, Mode=OneWay, Converter={StaticResource DurationConverter}}" />
+                                   Text="{x:Bind sliderProgress.Value, Mode=OneWay, Converter={StaticResource TimeSpanStrConverter}}" />
                         <TextBlock Margin="2,0"
                                    VerticalAlignment="Center"
                                    FontSize="12"
@@ -339,16 +341,17 @@
                         <TextBlock VerticalAlignment="Center"
                                    FontSize="12"
                                    Foreground="#FFC4C4C4"
-                                   Text="{x:Bind _playerVM.CurrentMusic.Length, Mode=OneWay, Converter={StaticResource DurationConverter}}" />
+                                   Text="{x:Bind _playerVM.CurrentMusic.Length, Mode=OneWay, Converter={StaticResource TimeSpanStrConverter}}" />
                     </StackPanel>
                 </Grid>
                 <Slider x:Name="sliderProgress"
                         Grid.Row="1"
                         VerticalAlignment="Top"
-                        Maximum="100"
+                        Maximum="{x:Bind _playerVM.CurrentMusic.Length, Mode=OneWay, Converter={StaticResource TimeSpanToSecondConverter}}"
                         Minimum="0"
                         Style="{StaticResource ProgressSliderStyle}"
-                        Value="{x:Bind _playerVM.PlaybackProgress, Mode=OneWay}" />
+                        ThumbToolTipValueConverter="{StaticResource TimeSpanStrConverter}"
+                        Value="{x:Bind _playerVM.CurrentMusic.Position, Mode=OneWay, Converter={StaticResource TimeSpanToSecondConverter}}" />
             </Grid>
         </Grid>
     </Grid>
